encrypt Password for the registration - make Login

--- a/templates/registration/registration.html
+++ b/templates/registration/registration.html
@@ -7,6 +7,11 @@
   <title>Document</title>
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-md">
+      <a class="navbar-brand" href="http://127.0.0.1:8000/login/">Login</a>
+    </div>
+  </nav>
   <form method="post">
     {% csrf_token %}
     <section class="vh-100" style="background-color: #eee;">
